src/ui/snapshots/watch_drill/coxtop__ui__watch_drill__tests__an_empty_list_draws_one_dim_line.snap
---
source: src/ui/watch_drill.rs
assertion_line: 228
expression: terminal.backend().to_string()
---
"┌Watch─────────────────────────────────────────────────────────────────────────────────────────────┐"
"│nothing watched                                                                                   │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└Esc back──────────────────────────────────────────────────────────────────────────────────────────┘"
